added changes to grid-system files

--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -126,7 +126,7 @@
       }
     }
 
-  /*media-max-576px */
+    /*media-max-576px */
 
     @media (max-width: 576px) {
       .left-side {
@@ -146,41 +146,17 @@
       <div class="left-side">left side</div>
       <div class="right-side">Right side
         <div class="row">
-          <!-- <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-            col #1
-          </div>
-          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-            col #2
-          </div> -->
-
-          <div class="col-12 col-m-6 col-l-4 col-xl-12">
-            card 1
-          </div>
-          <div class="col-12 col-m-6 col-l-4 col-xl-12">
-            card 2
-          </div>
-          <div class="col-12 col-m-6 col-l-4 col-xl-12">
-            card 3
-          </div>
-          <div class="col-12 col-m-6 col-l-4 col-xl-12">
-            card 4
-          </div>
-          <div class="col-12 col-m-6 col-l-4 col-xl-12">
-            card 5
-          </div>
-          <div class="col-12 col-m-6 col-l-4 col-xl-12">
-            card 6
-          </div>
-          <div class="col-12 col-m-6 col-l-4 col-xl-12">
-            card 7
-          </div>
-          <div class="col-12 col-m-6 col-l-4 col-xl-12">
-            card 8
-          </div>
-          <div class="col-12 col-m-6 col-l-4 col-xl-12">
-            card 9
-          </div>
-
+          <!-- <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">col #1</div>
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">col #2</div> -->
+          <div class="col-12 col-m-6 col-l-4 col-xl-12">card 1</div>
+          <div class="col-12 col-m-6 col-l-4 col-xl-12">card 2</div>
+          <div class="col-12 col-m-6 col-l-4 col-xl-12">card 3</div>
+          <div class="col-12 col-m-6 col-l-4 col-xl-12">card 4</div>
+          <div class="col-12 col-m-6 col-l-4 col-xl-12">card 5</div>
+          <div class="col-12 col-m-6 col-l-4 col-xl-12">card 6</div>
+          <div class="col-12 col-m-6 col-l-4 col-xl-12">card 7</div>
+          <div class="col-12 col-m-6 col-l-4 col-xl-12">card 8</div>
+          <div class="col-12 col-m-6 col-l-4 col-xl-12">card 9</div>
         </div>
       </div>
     </div>
