--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
           <div class="foot">
             <div class="page">
-              <img src="./images/Left-Arrow.svg" alt="" />
+              <img class="page-image" src="./images/Left-Arrow.svg" alt="" />
             </div>
             <ul class="pages">
               <li class="pages-item">
@@ -456,7 +456,7 @@
               </li>
             </ul>
             <div class="page">
-              <img src="./images/Right-Arrow.svg" alt="" />
+              <img class="page-image" src="./images/Right-Arrow.svg" alt="" />
             </div>
           </div>
         </div>
