--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -1,128 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
-  <title>Grid with media queries</title>
-  <style>
-    .container {
-      width: 100%;
-      margin-bottom: 30px;
-    }
-
-    .row {
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    div[class^='col-'] {
-      outline: 1px solid red;
-      background: lightgray;
-      text-align: center;
-    }
-
-    .col-1 {
-      width: calc(100% / 12);
-    }
-
-    .col-2 {
-      width: calc(100% / 12 * 2);
-    }
-
-    .col-3 {
-      width: calc(100% / 12 * 3);
-    }
-
-    .col-4 {
-      width: calc(100% / 12 * 4);
-    }
-
-    .col-5 {
-      width: calc(100% / 12 * 5);
-    }
-
-    .col-6 {
-      width: calc(100% / 12 * 6);
-    }
-
-    .col-7 {
-      width: calc(100% / 12 * 7);
-    }
-
-    .col-8 {
-      width: calc(100% / 12 * 8);
-    }
-
-    .col-9 {
-      width: calc(100% / 12 * 9);
-    }
-
-    .col-10 {
-      width: calc(100% / 12 * 10);
-    }
-
-    .col-11 {
-      width: calc(100% / 12 * 11);
-    }
-
-    .col-12 {
-      width: calc(100% / 12 * 12);
-    }
-
-    /* s */
-    @media (min-width: 576px) {
-      .col-s-2 {
-        width: calc(100% / 12 * 2);
-      }
-
-      .col-s-10 {
-        width: calc(100% / 12 * 10);
-      }
-    }
-
-    /* m */
-    @media (min-width: 768px) {
-      .col-m-6 {
-        width: calc(100% / 12 * 6);
-      }
-    }
-
-    /* l */
-    @media (min-width: 992px) {
-      .col-l-4 {
-        width: calc(100% / 12 * 4);
-      }
-
-      .col-l-8 {
-        width: calc(100% / 12 * 8);
-      }
-    }
-
-    /* xl */
-    @media (min-width: 1200px) {
-      .col-xl-2 {
-        width: calc(100% / 12 * 2);
-      }
-
-      .col-xl-10 {
-        width: calc(100% / 12 * 10);
-      }
-    }
-  </style>
+	<meta charset="UTF-8">
+	<title>MediaQueris</title>
+	<link rel="stylesheet" href="styles/style-media.css">
 </head>
 <body>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
-        </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
-        </div>
-      </div>
-    </div>
-  </main>
+	<main>
+		
+		<div class="conteiner h-100">
+			
+			<div class="left-side col-sm-3 disp-non">
+				<div class="left-side-naz">lift-side</div>
+			</div>
+
+			<div class="right-side col-xs-12 col-sm-9 h-100">
+
+				<div class="right-side-naz">right-side</div>
+
+
+				<div class="setka col-xs-12 col-sm-6 col-md-4">
+						Card 1
+				</div>
+
+				<div class="setka col-xs-12 col-sm-6 col-md-4">
+						Card 2
+				</div>
+
+				<div class="setka col-xs-12 col-sm-6 col-md-4">
+						Card 3
+				</div>
+
+				<div class="setka col-xs-12 col-sm-6 col-md-4">
+						Card 4
+				</div>
+
+				<div class="setka col-xs-12 col-sm-6 col-md-4">
+						Card 5
+				</div>
+
+				<div class="setka col-xs-12 col-sm-6 col-md-4">
+						Card 6
+				</div>
+
+				<div class="setka col-xs-12 col-sm-6 col-md-4">
+						Card 7
+				</div>
+
+				<div class="setka col-xs-12 col-sm-6 col-md-4">
+						Card 8
+				</div>
+
+				<div class="setka col-xs-12 col-sm-6 col-md-4">
+						Card 9
+				</div>
+
+			</div>
+		</div>
+	</main>
 </body>
 </html>
