--- a/pagination/index.html
+++ b/pagination/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Pagination component</title>
-  <link rel="stylesheet" href="/component-card/pagination/style.css">
+  <link rel="stylesheet" href="/pagination/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <style>
     .wrapper {
