1st trial after big pull

--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -29,7 +29,7 @@
       .leftside{
         outline: 1px solid blue;
         background: red;
-        height: 100%vw;
+        height: 100%;
       }
 
       .rightside{
