--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Grid with media queries</title>
   <style>
     .container {
@@ -20,6 +20,10 @@
       outline: 1px solid red;
       background: lightgray;
       text-align: center;
+    }
+
+    .col-0 {
+      display: none;
     }
 
     .col-1 {
@@ -49,7 +53,6 @@
     .col-7 {
       width: calc(100% / 12 * 7);
     }
-
     .col-8 {
       width: calc(100% / 12 * 8);
     }
@@ -71,42 +74,224 @@
     }
 
     /* s */
-    @media (min-width: 576px) {
+    @media screen and (max-width: 576px) {
+      .col-s-0 {
+        display: none;
+      }
+
+      .col-s-1 {
+      width: calc(100% / 12);
+      }
+
       .col-s-2 {
-        width: calc(100% / 12 * 2);
+      width: calc(100% / 12 * 2);
+      }
+
+      .col-s-3 {
+        width: calc(100% /12 * 3);
+      }
+
+      .col-s-4 {
+        width: calc(100% /12 * 4);
+      }
+
+      .col-s-5 {
+        width: calc(100% /12 * 5);
+      }
+
+      .col-s-6 {
+        width: calc(100% /12 * 6);
+      }
+
+      .col-s-7 {
+        width: calc(100% /12 * 7);
+      }
+
+      .col-s-8 {
+        width: calc(100% /12 * 8);
+      }
+
+      .col-s-9 {
+        width: calc(100% /12 * 9);
       }
 
       .col-s-10 {
-        width: calc(100% / 12 * 10);
+        width: calc(100% /12 * 10);
+      }
+
+      .col-s-11 {
+        width: calc(100% /12 * 11);
+      }
+
+      .col-s-12 {
+        width: calc(100% /12 * 12);
       }
     }
 
     /* m */
-    @media (min-width: 768px) {
+    @media screen and (max-width: 768px) {
+      .col-m-0 {
+        display: none;
+      }
+
+      .col-m-1 {
+      width: calc(100% / 12);
+      }
+
+      .col-m-2 {
+      width: calc(100% / 12 * 2);
+      }
+
+      .col-m-3 {
+        width: calc(100% /12 * 3);
+        display: none;
+      }
+
+      .col-m-4 {
+        width: calc(100% /12 * 4);
+      }
+
+      .col-m-5 {
+        width: calc(100% /12 * 5);
+      }
+
       .col-m-6 {
-        width: calc(100% / 12 * 6);
+        width: calc(100% /12 * 6);
+      }
+
+      .col-m-7 {
+        width: calc(100% /12 * 7);
+      }
+
+      .col-m-8 {
+        width: calc(100% /12 * 8);
+      }
+
+      .col-m-9 {
+        width: calc(100% /12 * 9);
+        display: block;
+      }
+
+      .col-m-10 {
+        width: calc(100% /12 * 10);
+      }
+
+      .col-m-11 {
+        width: calc(100% /12 * 11);
+      }
+
+      .col-m-12 {
+        width: calc(100% /12 * 12);
       }
     }
 
-    /* l */
-    @media (min-width: 992px) {
+  /* l */
+  @media screen and (max-width: 980px) {
+    .col-l-0 {
+        display: none;
+      }
+
+      .col-l-1 {
+      width: calc(100% / 12);
+      }
+
+      .col-l-2 {
+      width: calc(100% / 12 * 2);
+      }
+
+      .col-l-3 {
+        width: calc(100% /12 * 3);
+      }
+
       .col-l-4 {
-        width: calc(100% / 12 * 4);
+        width: calc(100% /12 * 4);
+      }
+
+      .col-l-5 {
+        width: calc(100% /12 * 5);
+      }
+
+      .col-l-6 {
+        width: calc(100% /12 * 6);
+      }
+
+      .col-l-7 {
+        width: calc(100% /12 * 7);
       }
 
       .col-l-8 {
-        width: calc(100% / 12 * 8);
+        width: calc(100% /12 * 8);
+      }
+
+      .col-l-9 {
+        width: calc(100% /12 * 9);
+      }
+
+      .col-l-10 {
+        width: calc(100% /12 * 10);
+      }
+
+      .col-l-11 {
+        width: calc(100% /12 * 11);
+      }
+
+      .col-l-12 {
+        width: calc(100% /12 * 12);
       }
     }
 
-    /* xl */
-    @media (min-width: 1200px) {
+     /* xl */
+  @media screen and (min-width: 1500px) {
+    .col-xl-0 {
+        display: none;
+      }
+
+      .col-xl-1 {
+      width: calc(100% / 12);
+      }
+
       .col-xl-2 {
-        width: calc(100% / 12 * 2);
+      width: calc(100% / 12 * 2);
+      }
+
+      .col-xl-3 {
+        width: calc(100% /12 * 3);
+      }
+
+      .col-xl-4 {
+        width: calc(100% /12 * 4);
+      }
+
+      .col-xl-5 {
+        width: calc(100% /12 * 5);
+      }
+
+      .col-xl-6 {
+        width: calc(100% /12 * 6);
+      }
+
+      .col-xl-7 {
+        width: calc(100% /12 * 7);
+      }
+
+      .col-xl-8 {
+        width: calc(100% /12 * 8);
+      }
+
+      .col-xl-9 {
+        width: calc(100% /12 * 9);
       }
 
       .col-xl-10 {
-        width: calc(100% / 12 * 10);
+        width: calc(100% /12 * 10);
+      }
+
+      .col-xl-11 {
+        width: calc(100% /12 * 11);
+      }
+
+      .col-xl-12 {
+        width: calc(100% /12 * 12);
       }
     }
   </style>
@@ -115,11 +300,18 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
-        </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+        <div class="col-3 col-s-0 col-m-4 col-l-3 col-xl-3">Left Side</div>
+        <div class="col-9 col-s-9 col-m-8 col-l-9 col-xl-9">Right Side</div>
+    <!--- <div class="row">
+           <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-4">Card 1</div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-4">Card 2</div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-4">Card 3</div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-4">Card 4</div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-4">Card 5</div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-4">Card 6</div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-4">Card 7</div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-4">Card 8</div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-4">Card 9</div> -->
         </div>
       </div>
     </div>
