--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -9,82 +9,80 @@
       width: 100%;
       margin-bottom: 30px;
     }
-
     .row {
       width: 100%;
       display: flex;
       flex-wrap: wrap;
     }
-
     div[class^='col-'] {
       outline: 1px solid red;
-      background: lightgray;
       text-align: center;
     }
-
     .col-1 {
       width: calc(100% / 12);
     }
-
     .col-2 {
       width: calc(100% / 12 * 2);
     }
-
     .col-3 {
       width: calc(100% / 12 * 3);
     }
-
     .col-4 {
       width: calc(100% / 12 * 4);
     }
-
     .col-5 {
       width: calc(100% / 12 * 5);
     }
-
     .col-6 {
       width: calc(100% / 12 * 6);
     }
-
     .col-7 {
       width: calc(100% / 12 * 7);
     }
-
     .col-8 {
       width: calc(100% / 12 * 8);
     }
-
     .col-9 {
       width: calc(100% / 12 * 9);
     }
-
     .col-10 {
       width: calc(100% / 12 * 10);
     }
-
     .col-11 {
       width: calc(100% / 12 * 11);
     }
-
     .col-12 {
       width: calc(100% / 12 * 12);
     }
-
+    /* xs */
+    @media (max-width: 576px) {
+      .col-xs-0{
+        display: none;
+      }
+      .col-xs-12 {
+        width: calc(100% / 12 * 12);
+      }
+    }
     /* s */
     @media (min-width: 576px) {
-      .col-s-2 {
-        width: calc(100% / 12 * 2);
+      .col-s-3 {
+        width: calc(100% / 12 * 3);
       }
-
-      .col-s-10 {
-        width: calc(100% / 12 * 10);
+      .col-s-6 {
+        width: calc(100% / 12 * 6);
+      }
+      .col-s-9 {
+        width: calc(100% / 12 * 9);
       }
     }
 
     /* m */
     @media (min-width: 768px) {
-      .col-m-6 {
-        width: calc(100% / 12 * 6);
+      .col-m-3 {
+        width: calc(100% / 12 * 3);
+      }
+      .col-m-9 {
+        width: calc(100% / 12 * 9);
       }
     }
 
@@ -93,21 +91,6 @@
       .col-l-4 {
         width: calc(100% / 12 * 4);
       }
-
-      .col-l-8 {
-        width: calc(100% / 12 * 8);
-      }
-    }
-
-    /* xl */
-    @media (min-width: 1200px) {
-      .col-xl-2 {
-        width: calc(100% / 12 * 2);
-      }
-
-      .col-xl-10 {
-        width: calc(100% / 12 * 10);
-      }
     }
   </style>
 </head>
@@ -115,11 +98,18 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
-        </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+        <div class="col-xs-0 col-s-3 col-m-3" style="text-align: right;">Left side</div>
+        <div class="col-xs-12 col-s-9 col-m-9" style="display: flex; flex-wrap: wrap;">
+          <div class="col-12" style="text-align: left;">Right side</div>
+          <div class="col-xs-12 col-s-6 col-l-4">card 1</div>
+          <div class="col-xs-12 col-s-6 col-l-4">card 2</div>
+          <div class="col-xs-12 col-s-6 col-l-4">card 3</div>
+          <div class="col-xs-12 col-s-6 col-l-4">card 4</div>
+          <div class="col-xs-12 col-s-6 col-l-4">card 5</div>
+          <div class="col-xs-12 col-s-6 col-l-4">card 6</div>
+          <div class="col-xs-12 col-s-6 col-l-4">card 7</div>
+          <div class="col-xs-12 col-s-6 col-l-4">card 8</div>
+          <div class="col-xs-12 col-s-6 col-l-4">card 9</div>
         </div>
       </div>
     </div>
