--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -7,16 +7,27 @@
   <style>
     .container {
       width: 100%;
+      max-width: 1320px;
       margin-bottom: 30px;
+      margin: 0 auto;
+      padding-left: 15px;
+      padding-right: 15px;
+      height: 100%;
     }
 
-    .row {
+    .row, .left-side, .right-side {
       width: 100%;
       display: flex;
       flex-wrap: wrap;
     }
 
-    div[class^='col-'] {
+    @media (max-width: 768px) {
+      .left-side{
+        display: none;
+      }
+    }
+
+    div[class^='col-'], .left-side {
       outline: 1px solid red;
       background: lightgray;
       text-align: center;
@@ -24,6 +35,7 @@
 
     .col-1 {
       width: calc(100% / 12);
+      column-gap: 2rem;
     }
 
     .col-2 {
@@ -72,40 +84,8 @@
 
     /* s */
     @media (min-width: 576px) {
-      .col-s-1 {
-        width: calc(100% / 12 * 1);
-      }
-
       .col-s-2 {
         width: calc(100% / 12 * 2);
-      }
-
-      .col-s-3 {
-        width: calc(100% / 12 * 3);
-      }
-
-      .col-s-4 {
-        width: calc(100% / 12 * 4);
-      }
-
-      .col-s-5 {
-        width: calc(100% / 12 * 5);
-      }
-
-      .col-s-6 {
-        width: calc(100% / 12 * 6);
-      }
-
-      .col-s-7 {
-        width: calc(100% / 12 * 7);
-      }
-
-      .col-s-8 {
-        width: calc(100% / 12 * 8);
-      }
-
-      .col-s-9 {
-        width: calc(100% / 12 * 9);
       }
 
       .col-s-10 {
@@ -115,126 +95,26 @@
 
     /* m */
     @media (min-width: 768px) {
-      .col-m-1 {
-        width: calc(100% / 12 * 1);
-      }
-
-      .col-m-2 {
-        width: calc(100% / 12 * 2);
-      }
-
-      .col-m-3 {
-        width: calc(100% / 12 * 3);
-      }
-
-      .col-m-4 {
-        width: calc(100% / 12 * 4);
-      }
-
-      .col-m-5 {
-        width: calc(100% / 12 * 5);
-      }
-
       .col-m-6 {
         width: calc(100% / 12 * 6);
-      }
-
-      .col-m-7 {
-        width: calc(100% / 12 * 7);
-      }
-
-      .col-m-8 {
-        width: calc(100% / 12 * 8);
-      }
-
-      .col-m-9 {
-        width: calc(100% / 12 * 9);
-      }
-
-      .col-m-10 {
-        width: calc(100% / 12 * 10);
       }
     }
 
     /* l */
     @media (min-width: 992px) {
-      .col-l-1 {
-        width: calc(100% / 12 * 1);
-      }
-
-      .col-l-2 {
-        width: calc(100% / 12 * 2);
-      }
-
-      .col-l-3 {
-        width: calc(100% / 12 * 3);
-      }
-
       .col-l-4 {
         width: calc(100% / 12 * 4);
-      }
-
-      .col-l-5 {
-        width: calc(100% / 12 * 5);
-      }
-
-      .col-l-6 {
-        width: calc(100% / 12 * 6);
-      }
-
-      .col-l-7 {
-        width: calc(100% / 12 * 7);
       }
 
       .col-l-8 {
         width: calc(100% / 12 * 8);
       }
-
-      .col-l-9 {
-        width: calc(100% / 12 * 9);
-      }
-
-      .col-l-10 {
-        width: calc(100% / 12 * 10);
-      }
     }
 
     /* xl */
     @media (min-width: 1200px) {
-      .col-xl-1 {
-        width: calc(100% / 12 * 1);
-      }
-
       .col-xl-2 {
         width: calc(100% / 12 * 2);
-      }
-
-      .col-xl-3 {
-        width: calc(100% / 12 * 3);
-      }
-
-      .col-xl-4 {
-        width: calc(100% / 12 * 4);
-      }
-
-      .col-xl-5 {
-        width: calc(100% / 12 * 5);
-      }
-
-      .col-xl-6 {
-        width: calc(100% / 12 * 6);
-      }
-
-      .col-xl-7 {
-        width: calc(100% / 12 * 7);
-      }
-
-      .col-xl-8 {
-        width: calc(100% / 12 * 8);
-      }
-
-      .col-xl-9 {
-        width: calc(100% / 12 * 9);
       }
 
       .col-xl-10 {
@@ -247,11 +127,20 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
+        <div class="left-side col-12 col-xs-0 col-s-3 col-m-5 col-l-4 col-xl-3">
+          Left side
         </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+        <div class="right-side col-12 col-xs-12 col-s-9 col-m-7 col-l-8 col-xl-9">
+          <div class="col-12">Right side</div>
+          <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">1</div>
+          <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">2</div>
+          <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">3</div>
+          <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">4</div>
+          <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">5</div>
+          <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">6</div>
+          <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">7</div>
+          <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">8</div>
+          <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">9</div>
         </div>
       </div>
     </div>
