--- a/grid/flex-grid.html
+++ b/grid/flex-grid.html
@@ -1,115 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Grid</title>
-  <style>
-    .container {
-      width: 100%;
-      margin-bottom: 30px;
-    }
-
-    .row {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-    }
-
-    div[class^='col-'] {
-      outline: 1px solid red;
-      background: lightgray;
-      text-align: center;
-    }
-
-    .col-1 {
-      width: calc(100% / 12);
-    }
-
-    .col-2 {
-      width: calc(100% / 12 * 2);
-    }
-
-    .col-3 {
-      width: calc(100% / 12 * 3);
-    }
-
-    .col-4 {
-      width: calc(100% / 12 * 4);
-    }
-
-    .col-5 {
-      width: calc(100% / 12 * 5);
-    }
-
-    .col-6 {
-      width: calc(100% / 12 * 6);
-    }
-
-    .col-7 {
-      width: calc(100% / 12 * 7);
-    }
-
-    .col-8 {
-      width: calc(100% / 12 * 8);
-    }
-
-    .col-9 {
-      width: calc(100% / 12 * 9);
-    }
-
-    .col-10 {
-      width: calc(100% / 12 * 10);
-    }
-
-    .col-11 {
-      width: calc(100% / 12 * 11);
-    }
-
-    .col-12 {
-      width: calc(100% / 12 * 12);
-    }
-  </style>
-</head>
-<body>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-1">1</div>
-        <div class="col-1">2</div>
-        <div class="col-1">3</div>
-        <div class="col-1">4</div>
-        <div class="col-1">5</div>
-        <div class="col-1">6</div>
-        <div class="col-1">7</div>
-        <div class="col-1">8</div>
-        <div class="col-1">9</div>
-        <div class="col-1">10</div>
-        <div class="col-1">11</div>
-        <div class="col-1">12</div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-8">
-          8/12
+  <head>
+    <meta charset="UTF-8" />
+    <title>Grid with media queries</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="style-grid.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <header class="head">
+        <span class="logo-text">Online store</span>
+        <button class="cart">
+          <i class="bi bi-cart"> </i>
+          Cart
+        </button>
+      </header>
+      <div class="sid">sidebar</div>
+      <main class="main">
+        <div class="search">
         </div>
-        <div class="col-4">
-          4/12
+        <div class="for-card">
+        <div class="card">card 1</div>
+        <div class="card">card 2</div>
+        <div class="card">card 3</div>
+        <div class="card">card 4</div>
+        <div class="card">card 5</div>
+        <div class="card">card 6</div>
+        <div class="card">card 7</div>
+        <div class="card">card 8</div>
+        <div class="card">card 9</div>
+             <div class="card">card 10</div>
+             <div class="card">card 11</div>
         </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-3">
-          3/12
-        </div>
-        <div class="col-9">
-          9/12
-        </div>
-      </div>
-    </div>
-  </main>
-</body>
+      </main>
+  </body>
 </html>
