--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="card-image"></div>
       <div class="card-info">
         <div class="card-rating">
-          <span>1.23</span>
+          <div class="card-rating-number">1.23</div>
         </div>
         <div class="card-price">1599</div>
       </div>
@@ -26,4 +26,3 @@
   </div>
 </body>
 </html>
-
