--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div class="card-image"></div>
       <div class="card-info">
         <div class="card-rating">
-          <div class="card-rating-number">1.23</div>
+          <span>1.23</span>
+          <span><img src="/Star 1.png" alt="star"></span>
         </div>
         <div class="card-price">1599</div>
       </div>
