--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <main>
-        <div class="container">
+    <main class="h-100">
+        <div class="container h-100">
             <div class="left col-xs-0 col-s-3 col-m-3 col-l-3 col-xl-3">
                 col-left
             </div>
-            <div class="right col-xl-9 col-l-9 col-m-8 col-s-9">col-right
+            <div class="right col-xl-9 col-l-9 col-m-9 col-s-9">col-right
                 <div class="row">
                     <div class="col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">card-1</div>
                     <div class="col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">card-2</div>
@@ -27,7 +27,6 @@
                     <div class="col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">card-9</div>
                 </div>
             </div>
-
         </div>
     </main>
 </body>
