add header, edit styles

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,18 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+  <header>
+    <div class="container">
+      <div class="header-wrapper">
+        <div class="logo">Online Store</div>
+        <button class="button button_header">
+          <i class="icon-cart"></i>
+          Cart
+        </button>
+      </div>
+    </div>
+  </header>
+
   <main>
     <div id="root" class="wrapper"></div>
   </main>
