add header, fix styles

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,20 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+  <header>
+    <div class="container">
+      <div class="header-wrapper">
+        <div class="logo">Online Store</div>
+        <button class="button-cart">
+          <i class="icon-cart"></i>
+          CART
+        </button>
+      </div>
+    </div>
+  </header>
   <div id="root" class="wrapper"></div>
 
+  <script src="./components/double-slider/double-slider.js"></script>
   <script src="./index.js" type="module"></script>
 </body>
 </html>
